v5.1.0/_sources/generated/pcdsdevices.lasers.elliptec.Ell9.rst.txt
pcdsdevices.lasers.elliptec.Ell9
================================

.. currentmodule:: pcdsdevices.lasers.elliptec

.. autoclass:: Ell9

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - set_position (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:CURPOS``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - jog_fwd (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:MOVE_FWD``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - jog_bwd (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:MOVE_BWD``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - status (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{prefix}:M{self._channel}:STATUS``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - optimize (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:OPTIMIZE``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - _from_addr (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:FROM_ADDR``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - _to_addr (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:TO_ADDR``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - _save (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:SAVE``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - _command (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:CMD``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - _response (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{prefix}:PORT{self._port}:RESPONSE``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - name_0 (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:NAME0``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - name_1 (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:NAME1``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.lasers.elliptec.Ell6`
    
        * - home (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:HOME``
          - 
          - config
          - 
    
        * - name_2 (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:NAME2``
          - 
          - config
          - 
    
        * - name_3 (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:NAME3``
          - 
          - config
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    